--- a/OzzCodeGen/AspNetMvcGen.settings
+++ b/OzzCodeGen/AspNetMvcGen.settings
@@ -1254,12 +1254,24 @@
           <UseForCreate>Standart</UseForCreate>
           <UseForEdit>Standart</UseForEdit>
         </AspNetMvcPropertySetting>
+        <AspNetMvcPropertySetting>
+          <Name>PurchaseOrders</Name>
+          <Exclude>false</Exclude>
+          <UseInSearch>false</UseInSearch>
+          <InIndexView>true</InIndexView>
+          <InDetailsView>true</InDetailsView>
+          <InCreateView>true</InCreateView>
+          <InEditView>true</InEditView>
+          <HasValidation>true</HasValidation>
+          <UseForCreate>Standart</UseForCreate>
+          <UseForEdit>Standart</UseForEdit>
+        </AspNetMvcPropertySetting>
       </Properties>
       <ControllerName>SizeStandards</ControllerName>
       <DataSetName>SizeStandards</DataSetName>
       <SaveParameter>this</SaveParameter>
-      <ModelForCreate>SizeStandard</ModelForCreate>
-      <ModelForEdit>SizeStandard</ModelForEdit>
+      <ModelForCreate>SizeStandardVM</ModelForCreate>
+      <ModelForEdit>SizeStandardVM</ModelForEdit>
       <RolesCanView>users</RolesCanView>
       <RolesCanCreate>admin</RolesCanCreate>
       <RolesCanEdit>admin</RolesCanEdit>
@@ -1269,7 +1281,7 @@
       <GenerateIndexAction>true</GenerateIndexAction>
       <GenerateCreateAction>true</GenerateCreateAction>
       <GenerateDeleteAction>true</GenerateDeleteAction>
-      <GenerateEditAction>true</GenerateEditAction>
+      <GenerateEditAction>false</GenerateEditAction>
       <GenerateDetailsAction>true</GenerateDetailsAction>
       <IndexView>false</IndexView>
       <DetailsView>false</DetailsView>
@@ -1277,7 +1289,7 @@
       <EditView>false</EditView>
       <BaseControllerName>BaseController</BaseControllerName>
       <Area>Admin</Area>
-      <CreateRedirect>"Create", "SizeCaptions", new { sizeStandardId = sizeStandard.Id }</CreateRedirect>
+      <CreateRedirect>"Index"</CreateRedirect>
       <EditRedirect>"Index"</EditRedirect>
       <FillSelectListsMethod>SetSelectLists</FillSelectListsMethod>
     </BaseEntitySetting>
