--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Models\PurchaseOrderVM.cs" />
     <Compile Include="Models\SecurityRoles.g.cs" />
     <Compile Include="Models\SelectThemeVM.cs" />
+    <Compile Include="Models\SizeStandardVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -335,6 +336,7 @@
     <Content Include="Areas\Admin\Views\Shared\_SearchBoxPartial.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\SizeCaption.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\SizeStandard.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_EditSizeCaptions.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
